--- a/app/src/Dockerfile
+++ b/app/src/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update && apt-get install -y \
     gnupg \
     ca-certificates \
     procps \
+    chromium \
     libnss3 \
     libatk-bridge2.0-0 \
     libdrm2 \
@@ -28,6 +29,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Install Playwright browsers (required for Crawl4AI to work)
 RUN python -m playwright install chromium
+
+# Set environment variables for Chromium to work in Docker (disable sandbox)
+ENV CHROME_BIN=/usr/bin/chromium
+ENV CHROMIUM_FLAGS="--no-sandbox --disable-setuid-sandbox"
 
 # Copy the application code
 COPY . .
